--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,4 +6,6 @@
   No restaurants yet
 <% end %>
 
-<a href='#'>Add a restaurant</a>
+<!-- <a href='<%= new_restaurant_path %>'>Add a restaurant</a> -->
+
+<%= link_to "Add a restaurant", new_restaurant_path %>
