Adds reviews to restaurant

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,6 @@
 <p><%= @restaurant.name %></p>
 <p><%= @restaurant.description %></p>
+<p><% @restaurant.reviews.each do |review| %>
+  Thoughts:<%= review.thoughts %>
+  Rating:<%= review.rating %></p>
+<% end %>
