extends active record associations

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,14 +1,16 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <h2> <%= link_to restaurant.name, restaurant_path(restaurant) %> </h2>
-    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
-    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
-    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+    <% if current_user == restaurant.user %>
+      <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+      <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+    <% end %>
+    <% unless current_user.present? && current_user.reviewed_restaurants.include?(restaurant)  %>
+      <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+    <% end %>
   <% end %>
 <% else %>
   No restaurants yet
 <% end %>
-
-<!-- <a href='<%= new_restaurant_path %>'>Add a restaurant</a> -->
 
 <%= link_to "Add a restaurant", new_restaurant_path %>
