--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,7 +6,7 @@
         <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
         <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
       <% end %>
-      <% unless current_user.present? && current_user.reviewed_restaurants.include?(restaurant)  %>
+      <% unless  current_user.reviewed_restaurants.include?(restaurant) || current_user == restaurant.user %>
         <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
       <% end %>
     <% end %>
