--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,7 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <h2> <%= link_to restaurant.name, restaurant_path(restaurant) %> </h2>
+    <%= image_tag restaurant.image.url(:thumb) %>
     <% if current_user %>
       <% if current_user == restaurant.user %>
         <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
