--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,7 @@
   <% @restaurants.each do |restaurant| %>
     <h2> <%= link_to restaurant.name, restaurant_path(restaurant) %> </h2>
     <%= image_tag restaurant.image.url(:thumb) %>
-    <h3>Average rating: <%= restaurant.average_rating.to_i %></h3>
+    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <% if current_user %>
       <% if current_user == restaurant.user %>
         <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
